@@ -1,3 +1,7 @@
+2007-02-01  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
+	* libvncclient: add updateRect member to rfbClient, to allow
+	  requesting smaller updates than whole-screen.
+
 2007-01-31  Karl Runge <runge@karlrunge.com>
 	* libvncclient: add GotCursorShape() and GotCopyRect() hooks.
 	  fix copyrect code in rfbproto.c, add copyrect to default list.
